--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,24 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.app {
+  font-family: sans-serif;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.close-modal-button-box .MuiButtonBase-root {
+  width: 30px;
+  min-width: 30px;
+  height: 30px;
+  /* border: 2px solid red; */
+  border-radius: 50%;
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  transition: all ease-in 0.2s;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close-modal-button-box .MuiButtonBase-root:active {
+  transform: scale(0.95);
+  transition: all ease-out 0.2s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.action-buttons .MuiButton-root {
+  min-width: 82px;
+  min-height: 31px;
 }
