--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.app {
+/* .app {
   font-family: sans-serif;
   text-align: center;
 }
@@ -6,7 +6,6 @@
   width: 30px;
   min-width: 30px;
   height: 30px;
-  /* border: 2px solid red; */
   border-radius: 50%;
   position: absolute;
   top: -3px;
@@ -21,4 +20,24 @@
 .action-buttons .MuiButton-root {
   min-width: 82px;
   min-height: 31px;
+}
+ */
+* {
+	font-family: Arial, Helvetica, sans-serif;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+body {
+	background-color: black;
+}
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+.flex-center-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
