--- a/src/App.css
+++ b/src/App.css
@@ -22,22 +22,29 @@
   min-height: 31px;
 }
  */
+html {
+  scroll-behavior: smooth;
+}
 * {
-	font-family: Arial, Helvetica, sans-serif;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body {
-	background-color: black;
-}
+/* body {
+  background-color: black;
+  color: white;
+} */
 a {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .flex-center-center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.visuallyhidden {
+  display: none;
 }
